<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/main_nav_home">

    <fragment
        android:id="@+id/main_nav_home"
        android:name="pl.kartven.javaproapp.ui.main.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/main_nav_profile"
        android:name="pl.kartven.javaproapp.ui.main.fragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/main_nav_stats"
        android:name="pl.kartven.javaproapp.ui.main.fragment.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <activity
        android:id="@+id/main_nav_settings"
        android:name="pl.kartven.javaproapp.ui.settings.SettingsActivity"
        android:label="@string/menu_settings" />

</navigation>