<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_drawer_header_height"
    android:background="?colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_container_spacing_h"
    android:paddingVertical="@dimen/common_container_spacing_v"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/main_d_h_iv"
        android:layout_width="@dimen/main_logo_size"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/label_nav_header"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/computer" />

    <TextView
        android:id="@+id/main_d_h_tv_nickname"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/label_nickname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/label_email" />
</LinearLayout>