<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.StatsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/common_container_spacing_h"
            android:paddingBottom="@dimen/common_container_spacing_v">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/common_iv_max_height"
                android:src="@drawable/main_drawer_stats_src" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_container_spacing_v"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/common_tv_section_head_spacing_v"
                    android:paddingBottom="@dimen/common_tv_section_head_spacing_v"
                    android:text="@string/label_topics"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/common_tv_section_head_text_size"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_open"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_added"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_container_spacing_v"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/common_tv_section_head_spacing_v"
                    android:paddingBottom="@dimen/common_tv_section_head_spacing_v"
                    android:text="@string/label_tests"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/common_tv_section_head_text_size"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_open"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_closed_general"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_closed_success"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_closed_fail"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_efficiency"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:padding="@dimen/profile_table_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_added"
                            android:textColor="?colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>