<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".ui.topic.quiz.QuizActivity">

    <include
        android:id="@+id/quiz_include"
        layout="@layout/activity_quiz_coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/quiz_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_include"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/header_nav_padding"
            android:padding="@dimen/common__space_size">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/quiz_iv_logo"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tests"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/quiz_linear_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common__space_size"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quiz_iv_logo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/darker_grey"
                    android:textSize="@dimen/common__text_h3" />

                <TextView
                    android:id="@+id/quiz_tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/example_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common__text_h2"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quiz_linear_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common__space_size"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quiz_linear_title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/darker_grey"
                    android:textSize="@dimen/common__text_h3" />

                <TextView
                    android:id="@+id/quiz_tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/example_desc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common__text_h2"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quiz_linear_que"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common__space_size"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quiz_linear_desc">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que_amount"
                    android:textAlignment="center"
                    android:textColor="@color/darker_grey"
                    android:textSize="@dimen/common__text_h3" />

                <TextView
                    android:id="@+id/quiz_tv_que"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="none"
                    android:maxLines="1"
                    android:text="@string/XX"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common__text_h2"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="@dimen/common__space_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quiz_btn_start_quiz"
                style="Widget.Button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:foreground="?selectableItemBackground"
                android:text="@string/start_quiz"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>