<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_rv_padding">

        <ImageView
            android:id="@+id/main_rv_image_view"
            android:layout_width="@dimen/main_rv_item_ico_size"
            android:layout_height="@dimen/main_rv_item_ico_size"
            android:background="@color/light_gray"
            android:contentDescription="@string/lecture"
            android:padding="2dp"
            android:src="@drawable/tests"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_rv_right_arrow"
            app:layout_constraintStart_toEndOf="@id/main_rv_image_view"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_rv_tv_lec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/lec_XX"
                android:textColor="@color/dark_blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/main_rv_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_rv_tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/description"
                android:textColor="@color/dark_blue"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/main_rv_right_arrow"
            android:layout_width="@dimen/main_rv_item_ico_size"
            android:layout_height="@dimen/main_rv_item_ico_size"
            android:contentDescription="@string/lecture"
            android:padding="2dp"
            android:src="@drawable/main_rv_arrow_src"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_rv_tv_watermark"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lec_XX"
            android:textAlignment="textEnd"
            android:textColor="#4BAAAAAA"
            android:textSize="35pt"
            android:textStyle="bold|italic"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>